--- a/gulp/css/partials/core/_typography.scss
+++ b/gulp/css/partials/core/_typography.scss
@@ -106,7 +106,7 @@
     }
 
     .intro {
-        font-size: 25px;
+        font-size: 21px;
         line-height: 32px;
     }
 }
