--- a/gulp/css/partials/layout/_nav.scss
+++ b/gulp/css/partials/layout/_nav.scss
@@ -152,7 +152,7 @@
 		display: block;
 		width: 100%;
 		height: 55px;
-		z-index: 10;
+		z-index: 15;
 
 		&__header {
 			position: fixed;
@@ -229,7 +229,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			padding: 35px 20px;
+			padding: 35px 20px 60px 20px;
 			color: $color-white;
 			background-color: $color-black;
 			overflow: scroll;
