--- a/gulp/css/partials/layout/_panel.scss
+++ b/gulp/css/partials/layout/_panel.scss
@@ -175,7 +175,8 @@
 		&.is-active {
 			transform: translateY(0);
 			opacity: 1;
-			visibility: visible,
+			visibility: visible;
+			z-index: 10;
 		}
 
 		&.is-top,
@@ -183,6 +184,7 @@
 			transform: translateY(0);
 			opacity: 0;
 			visibility: hidden;
+			z-index: 1;
 		}
 
 		&.no-transition {
@@ -192,17 +194,19 @@
 
 	@include tablet-portrait {
 		display: block;
-		overflow: hidden;
-
-		.grid {
-			overflow: hidden;
-		}
+		overflow: scroll;
+		-webkit-overflow-scrolling: touch;
 
 		&__container {
-			height: 100%;
-			padding: 90px 20px 0 20px;
-			overflow: scroll;
-			-webkit-overflow-scrolling: touch;
+			position: relative;
+			padding: 90px 20px 60px 20px;
+		}
+
+		&__pager {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
 		}
 
 		&__btn {
@@ -245,6 +249,10 @@
 		  	display: -ms-flexbox;  /* TWEENER - IE 10 */
 		  	display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
 		  	display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+
+		  	.panel__container {
+		  		position: static;
+		  	}
 
 			.panel__container {
 				height: auto;
